# machine-learning

./: .gitignore  README.md  aula_05.ipynb  pyproject.toml
ames_project/: experiment.ipynb  experiment_ayres.ipynb  notes.md
aulas/: svm.ipynb
aulas/decision_tree/: decision_tree.ipynb
aulas/regressao_logistica/: regressao_logistica.ipynb
ml_pi/: prova_2022_2_NicolasCho.ipynb  zoo.csv
pi_leonardo/: fish.ipynb
training/logistic/: logistic.ipynb
