[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["leonardo.malta <leonardo.malta@torqi.com.br>"]
readme = "README.md"
packages = [{ include = "machine_learning" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
jupyterlab = "^3.5.3"
folium = "^0.14.0"
yapf = "^0.32.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
